[project]
name = "comfyui-websocket-save-promptid"
version = "1.0.0"
description = "WebSocket Save with Prompt ID for ComfyUI"
authors = [{name = "shedyhs"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.19.0"
]

[project.urls]
Repository = "https://github.com/shedyhs/my-custom-nodes2"

[tool.comfyui]
display_name = "WebSocket Save with Prompt ID"
